Complete the compiler: semantic analysis, data generator, code generation
Finishes the three required stages that were missing and fixes twelve
defects in the stages that already existed.

New stages
- Semantic analysis (src/Semantic/): twelve checks across both halves of
  the project, collected rather than thrown so one run reports everything.
  SEM01-06 cover the Flask application (undefined names, duplicate
  functions, duplicate routes, route/view parameter mismatch, missing
  templates, wrong argument counts); SEM07-12 cover the templates and the
  links between the two trees (unsupplied context variables, missing
  extends target, blocks absent from the parent, unknown filters, unused
  context, orphan templates). Tests/errors/ triggers every one.
- Data generator (src/Generator/DataGenerator.java): resolves each
  render_template context value against the module's top-level data and
  attaches the resolved Python node to the matching template tree as a
  BoundDataNode, so the product array from app.py now appears inside the
  Jinja tree that renders it.
- Code generation (src/CodeGen/): emits a runnable Flask project into
  generated/ - app.py, five templates, and the stylesheet. Both emitters
  re-derive parentheses from a precedence table since the AST does not
  record them. The output runs under Flask and round-trips back through
  the compiler with no errors.

Bug fixes
- The Python lexer had no '-', '*', '/', '%', '<', '>', '<=' or '>='
  tokens. The parser recovered from the resulting token errors and built
  a silently wrong tree, so `y = x - 1` compiled to `y = x`. Added the
  tokens plus an arith_expr/term/factor precedence cascade.
- Jinja expressions were flattened with ctx.getText() and re-parsed by
  string splitting. Because getText() drops whitespace, `user and admin`
  became one identifier named `userandadmin`. Replaced the token-soup
  expression rule with a real precedence cascade and rebuilt the AST
  builder to walk the parse tree; adde